syntax = "proto3";

package graphql;

import "google/protobuf/descriptor.proto";

message GraphqlSchemaOptions {
  string type_prefix = 1;
  bool ignore_requests = 2;
  bool ignore_responses = 3;
}

extend google.protobuf.FileOptions {
  GraphqlSchemaOptions schema = 2056;
}

message GraphqlObjectTypeOptions {
  // Do not generate GraphQL Object and Input. Nested types will not be ignored.
  bool ignore = 1;
  // If `squash_union` is true, the message is converted to `union` instead of object type.
  //
  // ```proto
  // message Content {
  //   option (graphql.object_type).squash_union = true;
  //   oneof content {
  //     Blog blog = 2;
  //     Video video = 2;
  //   }
  // }
  // ```
  //
  // ```grahpql
  // union Content = Blog | Video
  // ```
  bool squash_union = 2;
  // If `interface` is true, the message is converted to `interface` instead of object type.
  bool interface = 3;
}

extend google.protobuf.MessageOptions {
  GraphqlObjectTypeOptions object_type = 2056;
}

message GraphqlFieldOptions {
  bool ignore = 1;
  // Specify a field name in GraphQL. If do not specified, use the same as a Protobuf message field name.
  //
  // ```proto
  // message User {
  //   // Required. Output only.
  //   uint64 id = 1 [(graphql.field).name = "databaseId"];
  // }
  // ````
  //
  // ```grahpql
  // object User {
  //   databaseId: String!
  // }
  // ```
  string name = 2;
}

extend google.protobuf.FieldOptions {
  GraphqlFieldOptions field = 2056;
}

message GraphqlOneofOptions {
  bool ignore = 1;
}

extend google.protobuf.OneofOptions {
  GraphqlOneofOptions oneof = 2056;
}

message GraphqlEnumOptions {
  bool ignore = 1;
}

extend google.protobuf.EnumOptions {
  GraphqlEnumOptions enum_type = 2056;
}

message GraphqlEnumValueOptions {
  bool ignore = 1;
}

extend google.protobuf.EnumValueOptions {
  GraphqlEnumValueOptions enum_value = 2056;
}
